# BasestationRoombaV3

./: README.md  cs.py  nano_code.txt  path_planning.py
ArduinoCode/SimpleSerialReceive/: SimpleSerialReceive.ino
GUI/: dashboard.py  path_planning.py
install/: local_setup.sh  setup.sh
log/: latest_build
rover_input_pkg/: CMakeLists.txt  package.xml
rover_input_pkg/install/: setup.bash  setup.sh
rover_input_pkg/install/rover_input_pkg/share/ament_index/resource_index/package_run_dependencies/: rover_input_pkg
rover_input_pkg/install/rover_input_pkg/share/ament_index/resource_index/parent_prefix_path/: rover_input_pkg
rover_input_pkg/install/rover_input_pkg/share/rover_input_pkg/: local_setup.dsv  local_setup.sh  package.dsv  package.xml  package.zsh
rover_input_pkg/install/rover_input_pkg/share/rover_input_pkg/cmake/: rover_input_pkgConfig-version.cmake
rover_input_pkg/install/rover_input_pkg/share/rover_input_pkg/environment/: ament_prefix_path.dsv
rover_input_pkg/src/: input_node_v2.cpp
src/RoombaV2/: constants.xacro  roombav2.urdf.xacro
src/camera/: vision.py
src/microver/: CMakeLists.txt  view_microver.rviz  (+1 more)
src/rover_input_pkg/: CMakeLists.txt
src/rover_input_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/rover_input_pkg/install/rover_input_pkg/share/rover_input_pkg/: local_setup.bash  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/rover_input_pkg/install/rover_input_pkg/share/rover_input_pkg/cmake/: rover_input_pkgConfig.cmake
src/rover_input_pkg/install/rover_input_pkg/share/rover_input_pkg/environment/: path.dsv
src/rover_input_pkg/log/: latest_build
src/rover_input_pkg/src/: RoverCommand.msg  input_node.cpp  input_node_v2.cpp
(+65 files in other folders)
